# WheeBBot-v1

./: README.md
CAN_databases/: README.md
CAN_databases/IMU_CAN_dbc/: WheeBBot-IMU-can_test.py  generate_IMU_can_c_source.sh  generate_WheeBBot-IMU_can_dbc.py  whee_b_bot_imu_can.c  whee_b_bot_imu_can.h
CAN_databases/ODrive_CAN/: ODrive_can_axis_state-test.py  create_can_dbc.py  generate_IMU_can_c_source.sh  odrive_cansimple.c  odrive_cansimple.h
ROS2_foxy/: README.md
ROS2_foxy/wheebbot_ws/src/wheebbot/: CMakeLists.txt  README.md  model.config  package.xml
ROS2_foxy/wheebbot_ws/src/wheebbot/config/: ODrive.yaml  urdf_params.yaml
ROS2_foxy/wheebbot_ws/src/wheebbot/config/CAN_config/: README.md
ROS2_foxy/wheebbot_ws/src/wheebbot/description/sdf/: database.config
ROS2_foxy/wheebbot_ws/src/wheebbot/description/sdf/WheeBBot/: model.config  model.sdf  model.sdf.erb
ROS2_foxy/wheebbot_ws/src/wheebbot/description/sdf/my_camera/: model.config  model.sdf
ROS2_foxy/wheebbot_ws/src/wheebbot/description/sdf/my_custom_ground_plane/: model.sdf
ROS2_foxy/wheebbot_ws/src/wheebbot/description/sdf/my_custom_ground_plane_ign/: model.config  model.sdf
ROS2_foxy/wheebbot_ws/src/wheebbot/description/srdf/: wheebbot.srdf
ROS2_foxy/wheebbot_ws/src/wheebbot/description/urdf/: generate_urdf.sh  generate_urdf_from_xacro.sh  macros.urdf.xacro  materials.urdf.xacro  parameters.urdf.xacro  wheebbot.gazebo.xacro  wheebbot.ign.xacro  wheebbot.urdf  wheebbot.urdf.xacro
ROS2_foxy/wheebbot_ws/src/wheebbot/launch/: display_and_test_on_RViz.launch.py  gazebo.launch.py  gazebo_standalone.launch.py  gazebo_wheebbot.launch.py  ign_gazebo.launch.py  ign_gazebo_standalone.launch.py  ign_gazebo_wheebbot.launch.py  odrv0_axes_USBconfig.launch.py  odrv0_axes_USBconfigurator.launch.py  rviz_standalone.launch.py  rviz_standalone_ign.launch.py  spawn_entity.launch.py  spawn_entity_demo.launch.py  spawn_wheebbot.launch.py
ROS2_foxy/wheebbot_ws/src/wheebbot/rviz/: wheebbot.rviz
ROS2_foxy/wheebbot_ws/src/wheebbot/scripts/: odrive_axis_test.py  odrv0_axes_USBconfig.py
ROS2_foxy/wheebbot_ws/src/wheebbot/src/: odrive_axes_USBconfig.py  odrive_axis_config.py  odrive_axis_test.py  odrv0_axes_USBconfig.py  odrv0_axes_USBconfigurator.py
ROS2_foxy/wheebbot_ws/src/wheebbot/worlds/: wheebbot.world  wheebbot_ign.world
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/: CMakeLists.txt  package.xml
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/config/: awesome_leg.yaml  awesome_leg_cartesian_interface.yaml
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/description/sdf/WheeBBot/: model.config
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/description/sdf/my_custom_ground_plane/: model.sdf
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/description/urdf/: materials.xacro  wheebbot.xacro
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/launch/: WheeBBot.launch  wheebbot_gazebo.launch  wheebbot_rviz_standalone.launch
ROS2_foxy/wheebbot_ws_RPI/src/WheeBBot/worlds/: wheebbot.world
RPI_Ubuntu_20.04_server/: README.md  RPI_setup.md
wheebbot_ws/: README.md
(+38 files in other folders)
