<?xml version="1.0"?>
<package>
  <name>wheebbot</name>
  <version>0.0.0</version>
  <description>The WheeBBot package</description>

  <maintainer email="andrea.patrizi@iit.it">andrea</maintainer>
  <license>TODO</license>

   <build_depend>message_generation</build_depend> 
   <build_depend>tf</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>urdf</build_depend>

   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>catkin</buildtool_depend> 

   <run_depend>message_runtime</run_depend> 
   <run_depend>tf</run_depend>
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rviz</run_depend>
   <run_depend>gazebo_plugins</run_depend>
   <run_depend>gazebo_ros</run_depend>
   <run_depend>gazebo_ros_control</run_depend>
   <run_depend>xacro</run_depend>
   
</package>
